--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ body {
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  background-color: rgb(208, 240, 240);
+  margin: 5px;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
@@ -51,6 +53,7 @@ body {
     border-radius: 5px;
     margin-right: 30px;
     position: fixed;
+    
   }
   .cart-main {
     padding-right: 10px;
